<resources>
    <string name="app_name">DoIt</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="lorem_ipsum">Lorem Ipsum blah blah blah</string>
    <string name="title">Title</string>
    <string name="desc">Desc</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="all_tasks">All Tasks</string>
    <string name="add_task">Add Task</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log Out</string>
</resources>